--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,13 +1,14 @@
 name: ci
 
-on: [workflow_dispatch]
-#   push:
-#     branches:
-#       - main
+on:
+  workflow_dispatch:
+  push:
+    branches:
+      - main
 
 env:            
-  AWS_REGION: #replace-value      
-  ECR_REPOSITORY: #replace-value
+  AWS_REGION: ap-southeast-1   
+  ECR_REPOSITORY: jeff-node-webapp-test
 
 jobs:
   build:
@@ -32,3 +33,6 @@ jobs:
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          
+      - name: Checkout repository
+        uses: actions/checkout@v3
