--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,7 +8,7 @@ on:
 
 env:            
   AWS_REGION: ap-southeast-1   
-  ECR_REPOSITORY: 255945442255.dkr.ecr.ap-southeast-1.amazonaws.com/jeff-node-webapp-test
+  ECR_REPOSITORY: jeff/node-webapp-tests
 
 jobs:
   build:
