--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,7 +8,7 @@ on:
 
 env:            
   AWS_REGION: ap-southeast-1   
-  ECR_REPOSITORY: node-webapp-test
+  ECR_REPOSITORY: jeff/nodeapp-test
 
 jobs:
   build:
